# LLForge

./: CMakeLists.txt  LICENSE  README.md
Test/: func.mlir
Tools/: CMakeLists.txt  LLForgeOpt.cpp
src/IR/Dialect/: CMakeLists.txt  LLForgeDialect.cpp  LLForgeDialect.h  LLForgeDialect.td  LLForgeOps.cpp  LLForgeOps.h  LLForgeOps.td
src/IR/Dialect/Gen_Files/: LLForgeDialect.cpp.inc  LLForgeDialect.h.inc  LLForgeOps.cpp.inc  LLForgeOps.h.inc
src/Transforms/: CMakeLists.txt  OperationInsertion.cpp  Passes.h  Passes.td
